--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Check-in App</title>
+    <title>AGM-Check-in App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
